fix horizontal chat overflow

--- a/src/client/Chat.less
+++ b/src/client/Chat.less
@@ -12,7 +12,8 @@
     z-index: 1;
     padding: 8px;
     background-color: @panelGrayTransparent;
-    overflow-y: hidden;
+    overflow: hidden;
+    word-wrap: break-word;
     border: 2px solid @panelGray;
     
     li {
